update styling form akun internal dan produk iklan dan juga update pengaturan email vendor lewat email

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ DB_PASSWORD=maskenang23
 DB_NAME=main_main
 DB_PORT=5432
 JWT_SECRET=kenang23
-EMAIL_FROM = miftahfadhlurrahman508@gmail.com
+# ganti email nanti
+EMAIL_FROM = miftahfadhlurrahman508@gmail.com 
 EMAIL_PASS  = wvzg fbbv rxqt fudg
