--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ JWT_SECRET=kenang23
 # ganti email nanti
 EMAIL_FROM = miftahfadhlurrahman508@gmail.com 
 EMAIL_PASS  = wvzg fbbv rxqt fudg
+
+Maps_API = AIzaSyCYVTmbMdHJ42KZdhE3AoKmkt-c7bwRlfE
