--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "postinstall": "puppeteer install"
   },
   "keywords": [],
   "author": "",
